--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,17 @@
 
-FROM node:20-alpine
-
-
+FROM node:20-alpine AS builder
 WORKDIR /app
-
-
 COPY package*.json ./
 RUN npm install
-
-
 COPY . .
+RUN npm run build
+
+FROM nginx:stable-alpine
+
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 
-EXPOSE 5173
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-
-CMD ["npm", "run", "dev", "--", "--host"]
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
