--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,19 +1,18 @@
 server {
     listen 80;
+    server_name localhost;
 
-    # Handle React Frontend
+  
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        # If the user visits /register or /dashboard, 
-        # this line sends them to React instead of Go.
         try_files $uri $uri/ /index.html;
     }
 
-    # Handle all Backend API calls
+   
     location /api/ {
-        # Forward requests to the Go backend on port 8080
-        proxy_pass http://127.0.0.1:8080; 
+        
+        proxy_pass http://127.0.0.1:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
