--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,12 @@ services:
     container_name: rt_db
     restart: always
     network_mode: "host"
+    env_file:
+      - .env
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=reading_tracker
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - rt_data:/var/lib/postgresql/data
 
@@ -16,14 +18,8 @@ services:
     container_name: rt_backend
     restart: always
     network_mode: "host"
-    environment:
-      - DB_HOST=localhost
-      - DB_USER=postgres
-      - DB_PASSWORD=password
-      - DB_NAME=reading_tracker
-      - DB_PORT=5432
-      - PORT=8080
-      - JWT_SECRET=my_super_secret_key_123
+    env_file:
+      - .env
 
   frontend:
     build: ./frontend
